# todoapp

./: README.md
todoapp/wasm/: wisesayings.js  wisesayings_bg.wasm
wasm/: Cargo.toml
wasm/src/: lib.rs  text.txt
